--- a/index.html
+++ b/index.html
@@ -38,28 +38,43 @@
     <img class="Hi" src="Images/hi.gif" alt="hi">
     <h1>Какой шрифт берём?</h1>
     <h2>Если новости на повестке дня:</h2>
-    <h3>Топ шрифт для Заголовков</h3>
-    <h4>Helvetica<h4>
-      <p> 27% из 15 топ новостных сайтов используют этот шрифт. Строгий смелый и простой. Идеален для заголовков. Да про него даж фильм сняли.</p>
-    <h4>Georgia</h4>
-      <p>13% используют Georgia. Чёткий даже при низком разрешении и традиционный. Отличный выбор для консервативной аудитории.</p>
-    <h4>Proxima Nova</h4>
-      <p> 13% его используют с тех пор, как простота стала стандартом
-        <ul>А если я будущая-блоггерсмульонамиподписчиков?</ul>
-          <li>#1 должно быть не так формально, как на любимом НТВ</li>
-          <li>#2 акцент на неформальность и собственный образ</li>
-      </p>
-    <h4>Oswald</h4>
-      <p>10% блоггеров выбирают именно его. Бесплатный, простой и не совсем стандартный</p>
-    <h4>Ну и Georgia, Trebuchet, Helvetica и Arial</h4>
+    <h3>Топ шрифты для Заголовков</h3>
+      <img class="HELV" src="Images/27.png" alt="27">
+      <section class="HELVT">
+        <p>из 15 топ новостных сайтов используют этот шрифт. Строгий смелый и простой. Идеален для заголовков. Да про него даж фильм сняли.</p>
+      </section>
+    <img class="GEOR" src="Images/13.png" alt="13">
+      <section class="GEORT">
+        <p>используют именно этот шрифт. Чёткий даже при низком разрешении и традиционный. Отличный выбор для консервативной аудитории.</p>
+      </section>
+      <img class="PROX" src="Images/13%.png" alt="13">
+      <section class="PROXT">
+        <p> используют с тех пор, как простота стала стандартом
+          <img class="KIM" src="Images/Kim.gif" alt="KIM">
+          <section class="PROXT1">
+          <ul>А если я будущая-блоггерсмульонамиподписчиков?</ul>
+            <li>#1 должно быть не так формально, как на любимом НТВ</li>
+            <li>#2 акцент на неформальность и собственный образ</li>
+          </section>
+        </p>
+      </section>
+      <img class="OSW" src="Images/10.png" alt="10">
+      <section class="OSWT">
+        <p>блоггеров выбирают именно его. Бесплатный, простой и не совсем стандартный. Ну и Georgia, Trebuchet, Helvetica и Arial</p>
+      </section>
     <h4>Кастомизированный шрифт</h4>
-      <p>Создан со специальной целью.</p>
-      <p>Некоторые создавались под бренд и только с ним ассоциируются </p>
-        <ul>
-          <li>Theguardian Guardian Egyptian</li>
-          <li>Google Roboto</li>
-          <li>New York Times NYT Cheltenham</li>
-        </ul>
-    <p>Существует шрифт для упрощения работы редактора и корректора, шрифт для всех транспортных знаков Англии, шрифт для печати с наименьшим экологическим следом. Выбирайнехочу<p>
+      <section class="custom">
+        <p>Создан со специальной целью. Некоторые создавались под бренд и только с ним ассоциируются </p>
+      </section>
+      <img class="PIN" src="images/pin.png" />
+      <div class="displayContainer block">
+        <div>Theguardian Guardian Egyptian</div>
+        <div>Google Roboto</div>
+        <div>New York Times NYT Cheltenham</div>
+      </div>
+      <section class="custom1">
+      <p>Существует шрифт для упрощения работы редактора и корректора, шрифт для всех транспортных знаков Англии, шрифт для печати с наименьшим экологическим следом. <span class="inlinePaddingV1">#Выбирайнехочу</span><p>
+      </section>
+
   </body>
 </html>
