--- a/index.html
+++ b/index.html
@@ -35,22 +35,22 @@
         </ul>
       </nav>
     </section>
-    <img class="Hi" src="Images/hi.gif" alt="hi">
+    <img class="Hi" src="images/hi.gif" alt="hi">
     <h1>Какой шрифт берём?</h1>
     <h2>Если новости на повестке дня:</h2>
     <h3>Топ шрифты для Заголовков</h3>
-      <img class="HELV" src="Images/27.png" alt="27">
+      <img class="HELV" src="images/27.png" alt="27">
       <section class="HELVT">
         <p>из 15 топ новостных сайтов используют этот шрифт. Строгий смелый и простой. Идеален для заголовков. Да про него даж фильм сняли.</p>
       </section>
-    <img class="GEOR" src="Images/13.png" alt="13">
+    <img class="GEOR" src="images/13.png" alt="13">
       <section class="GEORT">
         <p>используют именно этот шрифт. Чёткий даже при низком разрешении и традиционный. Отличный выбор для консервативной аудитории.</p>
       </section>
-      <img class="PROX" src="Images/13%.png" alt="13">
+      <img class="PROX" src="images/13%.png" alt="13">
       <section class="PROXT">
         <p> используют с тех пор, как простота стала стандартом
-          <img class="KIM" src="Images/Kim.gif" alt="KIM">
+          <img class="KIM" src="images/Kim.gif" alt="KIM">
           <section class="PROXT1">
           <ul>А если я будущая-блоггерсмульонамиподписчиков?</ul>
             <li>#1 должно быть не так формально, как на любимом НТВ</li>
@@ -58,7 +58,7 @@
           </section>
         </p>
       </section>
-      <img class="OSW" src="Images/10.png" alt="10">
+      <img class="OSW" src="images/10.png" alt="10">
       <section class="OSWT">
         <p>блоггеров выбирают именно его. Бесплатный, простой и не совсем стандартный. Ну и Georgia, Trebuchet, Helvetica и Arial</p>
       </section>
