--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <section class="GEORT">
         <p>используют именно этот шрифт. Чёткий даже при низком разрешении и традиционный. Отличный выбор для консервативной аудитории.</p>
       </section>
-      <img class="PROX" src="images/13%.png" alt="13">
+      <img class="PROX" src="images/131.png" alt="13">
       <section class="PROXT">
         <p> используют с тех пор, как простота стала стандартом
           <img class="KIM" src="images/Kim.gif" alt="KIM">
