--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <ul class="dropdown">
               <li><a href="#">С чего всё началось</a></li>
               <li><a href="#">Что такое дизайн?</a></li>
-              <li><a href="#">Какой шрифт берём?</a></li>
+              <li><a href="https://ostrovskayadaria.github.io/HSE-PROJECT-first.third/">Какой шрифт берём?</a></li>
             </ul>
           </li>
           <li><a href="#">Графический дизайн</a>
