--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul class="dropdown">
               <li><a href="#">Деконструкция</a></li>
               <li><a href="#">Гифки рулят интернетом</a></li>
-              <li><a href="#">Коротко о главном</a></li>
+              <li><a href="https://ostrovskayadaria.github.io/HSE-PROJECT-first.forth/">Коротко о главном</a></li>
             </ul>
           </li>
           <li><a href="#">Программирование</a>
