--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
         <p> используют с тех пор, как простота стала стандартом
           <img class="KIM" src="images/Kim.gif" alt="KIM">
           <section class="PROXT1">
-          <ul>А если я будущая-блоггерсмульонамиподписчиков?</ul>
+          <ul>А если я будущая-блоггерсмульонамиподписчиков?
             <li>#1 должно быть не так формально, как на любимом НТВ</li>
             <li>#2 акцент на неформальность и собственный образ</li>
+          </ul>
           </section>
         </p>
       </section>
@@ -73,8 +74,7 @@
         <div>New York Times NYT Cheltenham</div>
       </div>
       <section class="custom1">
-      <p>Существует шрифт для упрощения работы редактора и корректора, шрифт для всех транспортных знаков Англии, шрифт для печати с наименьшим экологическим следом. <span class="inlinePaddingV1">#Выбирайнехочу</span><p>
+        <p>Существует шрифт для упрощения работы редактора и корректора, шрифт для всех транспортных знаков Англии, шрифт для печати с наименьшим экологическим следом. <span class="inlinePaddingV1">#Выбирайнехочу</span><p>
       </section>
-
   </body>
 </html>
