--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <h3>Топ шрифты для Заголовков</h3>
       <img class="HELV" src="images/27.png" alt="27">
       <section class="HELVT">
-        <p>из 15 топ новостных сайтов используют этот шрифт. Строгий смелый и простой. Идеален для заголовков. Да про него даж фильм сняли.</p>
+        <p>из <strong>15 топ новостных сайтов</strong> используют этот шрифт. Строгий смелый и простой. Идеален для заголовков. Да про него даж фильм сняли.</p>
       </section>
     <img class="GEOR" src="images/13.png" alt="13">
       <section class="GEORT">
@@ -74,7 +74,7 @@
         <div>New York Times NYT Cheltenham</div>
       </div>
       <section class="custom1">
-        <p>Существует шрифт для упрощения работы редактора и корректора, шрифт для всех транспортных знаков Англии, шрифт для печати с наименьшим экологическим следом. <span class="inlinePaddingV1">#Выбирайнехочу</span><p>
+        <p>Существует шрифт для упрощения работы редактора и корректора, шрифт для всех транспортных знаков Англии, шрифт для печати с наименьшим экологическим следом. <span class="inlinePaddingV1"><strong>#Выбирайнехочу</strong></span><p>
       </section>
   </body>
 </html>
